# coconut

./: .gitignore  Cargo.toml  README.md
src/: config.rs  error.rs  main.rs
src/auth/: constants.rs  mod.rs  token.rs
src/download/: manager.rs
src/gog/: client.rs  mod.rs  models.rs
