[package]
name = "coconut"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "CLI tool for syncing GOG game libraries"

[dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread", "fs"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "cookies", "rustls-tls", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
url = "2"
open = "5"
dirs = "6"
thiserror = "2"
indicatif = "0.17"
console = "0.15"
dialoguer = "0.11"
futures = "0.3"
tokio-util = { version = "0.7", features = ["io"] }
urlencoding = "2"
libc = "0.2"
